swiftide-macros/tests/tool/tool_derive_missing_description.stderr
error: Missing field `description`
 --> tests/tool/tool_derive_missing_description.rs:6:17
  |
6 | #[derive(Clone, Tool)]
  |                 ^^^^
  |
  = note: this error originates in the derive macro `Tool` (in Nightly builds, run with -Z macro-backtrace for more info)

warning: unused variable: `agent_context`
  --> tests/tool/tool_derive_missing_description.rs:12:37
   |
12 |     async fn my_tool_no_args(&self, agent_context: &dyn AgentContext) -> Result<ToolOutput> {
   |                                     ^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_agent_context`
   |
   = note: `#[warn(unused_variables)]` on by default
